<resources>
    <string name="app_name">InstabugTask</string>
    <string name="android_challenge">Android Challenge</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
</resources>